fix dark mode popup color

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,3 +33,8 @@ button {
   padding: 1px 6px;
   font-weight: bold;
 }
+
+div.mapboxgl-popup-content p,
+button {
+  color: #000;
+}
